unpackaged/main/default/objects/Refunds_ICS__c/Refunds_ICS__c.object-meta.xml
<CustomObject>
    <label>Refunds</label>
    <nameField>
        <displayFormat>Refunds-{00000}</displayFormat>
        <label>Refunds ICS No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refunds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>