unpackaged/main/default/objects/Refunds_ICS__c/fields/AR1_Approver_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>AR1_Approver_Email_ID__c</fullName>
    <label>AR1 Approver Email ID</label>
    <type>Email</type>
</CustomField>