unpackaged/main/default/objects/Refunds_ICS__c/fields/AR1_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>AR1_Approver_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AR1 Approver Name</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>Refunds_ICS1</relationshipName>
    <type>Lookup</type>
</CustomField>