unpackaged/main/default/objects/Refunds_ICS__c/fields/Case_Location__c.field-meta.xml
<CustomField>
    <fullName>Case_Location__c</fullName>
    <formula>CSI_ICS__r.Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Location</label>
    <type>Text</type>
</CustomField>