unpackaged/main/default/objects/Refunds_ICS__c/fields/CSI_ICS__c.field-meta.xml
<CustomField>
    <fullName>CSI_ICS__c</fullName>
    <label>CSI ICS</label>
    <referenceTo>Customer_Service_Inquiries_ICS__c</referenceTo>
    <relationshipName>Refunds_ICS</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>