unpackaged/main/default/objects/Refunds_ICS__c/fields/CSO_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>CSO_Approver_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSO Approver Name</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Refunds (CSO Approver Name)</relationshipLabel>
    <relationshipName>Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>