unpackaged/main/default/objects/Refunds_ICS__c/fields/Justification_for_Refunds_Request__c.field-meta.xml
<CustomField>
    <fullName>Justification_for_Refunds_Request__c</fullName>
    <label>Justification for Refunds Request</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>