unpackaged/main/default/objects/Refunds_ICS__c/fields/Last_4_of_CC__c.field-meta.xml
<CustomField>
    <fullName>Last_4_of_CC__c</fullName>
    <label>Last 4 # of CC</label>
    <length>4</length>
    <type>Text</type>
</CustomField>