unpackaged/main/default/objects/Refunds_ICS__c/fields/Pymt_Type__c.field-meta.xml
<CustomField>
    <fullName>Pymt_Type__c</fullName>
    <label>Pymt Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CHECK</fullName>
            </value>
            <value>
                <fullName>CASH</fullName>
            </value>
            <value>
                <fullName>TRANSFER</fullName>
            </value>
            <value>
                <fullName>WIRE</fullName>
            </value>
            <value>
                <fullName>MC</fullName>
            </value>
            <value>
                <fullName>VI</fullName>
            </value>
            <value>
                <fullName>AX</fullName>
            </value>
            <value>
                <fullName>DI</fullName>
            </value>
            <value>
                <fullName>DV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>