unpackaged/main/default/objects/Refunds_ICS__c/fields/Total_Refunds_Currency__c.field-meta.xml
<CustomField>
    <fullName>Total_Refunds_Currency__c</fullName>
    <formula>CSI_ICS__r.Refunds_Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Refunds Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>