unpackaged/main/default/objects/Refunds_ICS__c/validationRules/ICS_Last4OfTokenNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>ICS_Last4OfTokenNumber</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(isblank(Last_4_of_Token__c)),NOT(ISNUMBER(  Last_4_of_Token__c  )))</errorConditionFormula>
    <errorDisplayField>Last_4_of_Token__c</errorDisplayField>
    <errorMessage>Please Verify the Token #</errorMessage>
</ValidationRule>