unpackaged/main/default/objects/Refunds_ICS__c/validationRules/ICS_Refunds_Cannot_be_Modified.validationRule-meta.xml
<ValidationRule>
    <fullName>ICS_Refunds_Cannot_be_Modified</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR
(
ISPICKVAL(CSI_ICS__r.Case_Approval_Status__c, &#39;Case Approved&#39;),
ISPICKVAL( CSI_ICS__r.Case_Approval_Status__c , &#39;Requestor Submitted&#39; ), 
ISPICKVAL( CSI_ICS__r.Case_Approval_Status__c , &#39;LOB Submitted&#39; ), 
ISPICKVAL( CSI_ICS__r.Case_Approval_Status__c , &#39;F&amp;R Submitted&#39; ), 
ISPICKVAL( CSI_ICS__r.Case_Approval_Status__c , &#39;AR1 Submitted&#39; ), 
ISPICKVAL( CSI_ICS__r.Case_Approval_Status__c , &#39;AR2 Submitted&#39; ) 
),
OR(ISCHANGED(Amount__c), 
ISCHANGED( Pymt_Type__c ), 
ISCHANGED( Sales_Receipt__c ), 
ISCHANGED( Sales_Order__c ), 
ISCHANGED( Justification_for_Refunds_Request__c ), 
ISCHANGED( Last_4_of_CC__c), 
ISCHANGED( Last_4_of_Token__c )
))</errorConditionFormula>
    <errorMessage>Case is Already Submitted for Approval. 
You don&#39;t have access to Modify.</errorMessage>
</ValidationRule>